project(contest2)
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_FLAGS "-O2 -Wall -Werror -g -fsanitize=leak -fsanitize=undefined -fsanitize=address")


add_executable(1-1 1/1.cpp)
add_executable(1-2 1/2.cpp)
add_executable(1-3 1/3.cpp)
add_executable(1-4 1/4.cpp)
add_executable(1-5 1/5.cpp)
add_executable(1-6 1/6.cpp)

add_executable(2-1 2/1.cpp)
add_executable(2-2 2/2.cpp)
add_executable(2-3 2/3.cpp)
add_executable(2-4 2/4.cpp)
add_executable(2-5 2/5.cpp)
add_executable(2-6 2/6.cpp)
add_executable(2-7 2/7.cpp)

add_executable(3-1 3/1.cpp)
add_executable(3-2 3/1.cpp 3/2.cpp)
add_executable(3-3 3/1.cpp 3/2.cpp 3/3.cpp)
add_executable(3-4 3/1.cpp 3/2.cpp 3/3.cpp 3/4.cpp)

add_executable(4-1 4/1.cpp)
add_executable(4-2 4/2.cpp)
add_executable(4-3 4/3.cpp)
add_executable(4-4 4/4.cpp)
add_executable(4-5 4/5.cpp)

add_executable(5-1 5/1.cpp)
add_executable(5-2 5/2.cpp)
add_executable(5-3 5/3.cpp)
add_executable(5-4 5/4.cpp)
add_executable(5-5 5/5.cpp)

add_executable(6-1 6/1.cpp)
add_executable(6-2 6/2.cpp)
add_executable(6-3 6/3.cpp)
add_executable(6-4 6/4.cpp)
add_executable(6-5 6/5.cpp)