project(contest2)
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_FLAGS "-O2 -Wall -Werror -g -fsanitize=leak -fsanitize=undefined -fsanitize=address")


add_executable(1-1 1/1.cpp)
add_executable(1-2 1/2.cpp)
add_executable(1-3 1/3.cpp)
add_executable(1-4 1/4.cpp)
add_executable(1-5 1/5.cpp)
add_executable(1-6 1/6.cpp)

add_executable(2-1 2/1.cpp)
add_executable(2-2 2/2.cpp)
add_executable(2-3 2/3.cpp)
add_executable(2-4 2/4.cpp)
add_executable(2-5 2/5.cpp)
add_executable(2-6 2/6.cpp)
add_executable(2-7 2/7.cpp)

add_executable(3-1 3/1.cpp)
add_executable(3-2 3/2.cpp)
add_executable(3-3 3/3.cpp)
add_executable(3-4 3/4.cpp)

add_executable(4-1 4/1.cpp)
add_executable(4-2 4/2.cpp)
add_executable(4-3 4/3.cpp)
add_executable(4-4 4/4.cpp)
add_executable(4-5 4/5.cpp)

add_executable(5-1 5/1.cpp)
add_executable(5-2 5/2.cpp)
add_executable(5-3 5/3.cpp)
add_executable(5-4 5/4.cpp)
add_executable(5-5 5/5.cpp)

add_executable(6-1 6/1.cpp)
add_executable(6-2 6/2.cpp)
add_executable(6-3 6/3.cpp)
add_executable(6-4 6/4.cpp)
add_executable(6-5 6/5.cpp)

add_executable(7-1 7/1.cpp)
add_executable(7-2 7/2.cpp)
add_executable(7-3 7/3.cpp)
add_executable(7-4 7/4.cpp)
add_executable(7-5 7/5.cpp)


add_executable(8-1 8/1.cpp)
add_executable(8-2 8/2.cpp)
add_executable(8-3 8/3.cpp)
add_executable(8-4 8/4.cpp)
add_executable(8-5 8/5.cpp)


add_executable(9-1 9/1.cpp)
add_executable(9-2 9/2.cpp)
add_executable(9-3 9/3.cpp)
add_executable(9-4 9/4.cpp)
add_executable(9-5 9/5.cpp)


add_executable(10-1 10/1.cpp)
add_executable(10-2 10/2.cpp)
add_executable(10-3 10/3.cpp)
add_executable(10-4 10/4.cpp)
add_executable(10-5 10/5.cpp)
